# systemabilitymgr_selectionfwk

./: OAT.xml  README.OpenSource  README.en.md  README.md  bundle.json  hisysevent-SELECTIONFWK.yaml  hisysevent.yaml  selection_service.gni
common/: BUILD.gn  block_data.h  callback_handler.cpp  callback_handler.h  callback_object.cpp  callback_object.h  concurrent_map.h  event_checker.cpp  event_checker.h  ffrt_block_queue.h  js_utils.cpp  js_utils.h  selection_data_inner.h  selection_interface.h  selection_js_utils.h  selectionfwk_js_utils.cpp  selectionmethod_trace.cpp  selectionmethod_trace.h  util.cpp  util.h
frameworks/ets/ets/: @ohos.selectionInput.SelectionExtensionAbility.ets  @ohos.selectionInput.SelectionExtensionContext.ets  BUILD.gn
frameworks/ets/taihe/SelectionManager/: BUILD.gn
frameworks/ets/taihe/SelectionPanel/: BUILD.gn
frameworks/js/napi/selection_ability/: BUILD.gn  js_panel.cpp  js_panel.h  js_selection_ability.cpp  js_selection_ability.h  js_selection_engine_setting.cpp  js_selection_engine_setting.h  panel_listener_impl.cpp  panel_listener_impl.h  selection_ability_module.cpp  selection_engine_module.cpp
frameworks/js/napi/selection_extension_context/: BUILD.gn  selection_extension_context.js  selection_extension_context_module.cpp
frameworks/native/selection_ability/: BUILD.gn  ISelectionListener.idl
frameworks/native/selection_ability/include/: panel_common.h  panel_info.h  panel_status_listener.h  selection_ability.h  selection_app_validator.h  selection_attribute.h  selection_listener_impl.h  selection_panel.h  selection_panel_manager.h  selection_panel_manger.h  selection_system_ability_utils.h  selection_window_info.h  task_manager.h
frameworks/native/selection_ability/src/: selection_ability.cpp  selection_app_validator.cpp  selection_listener_impl.cpp  selection_panel.cpp  selection_panel_manager.cpp  selection_system_ability_utils.cpp  task_manager.cpp
frameworks/native/selection_extension/: BUILD.gn
frameworks/native/selection_extension/include/: ets_selection_extension.h  ets_selection_extension_context.h  ets_selection_extension_instance.h  js_selection_extension.h  js_selection_extension_context.h  selection_extension.h  selection_extension_context.h  selection_extension_hilog.h  selection_extension_module_loader.h
frameworks/native/selection_extension/src/: ets_selection_extension.cpp  ets_selection_extension_context.cpp  ets_selection_extension_instance.cpp  js_selection_extension.cpp  js_selection_extension_context.cpp  selection_extension.cpp  selection_extension_context.cpp  selection_extension_module_loader.cpp
hiappevent_agent/: BUILD.gn  (+2 more)
interfaces/idl/: BUILD.gn  ISelectionListener.idl  ISelectionService.idl
service/: BUILD.gn  ISelectionService.idl  IWordSelectionService.idl  libselection_service.map  libword_selection_service.map  selection_service.map
service/focus_monitor/include/: focus_change_listener.h  focus_monitor_manager.h
service/focus_monitor/src/: focus_change_listener.cpp  focus_monitor_manager.cpp
service/include/: PasteboardDisposableObserver.h  db_selection_config_repository.h  selection_app_validator.h  selection_common.h  selection_config.h  selection_config_comparator.h  selection_config_database.h  selection_input_monitor.h  selection_service.h  sys_selection_config_repository.h  system_ability_status_change_listener.h  word_selection_interface.h  word_selection_proxy.h  word_selection_service.h  word_selection_stub.h
service/plugins/: BUILD.gn
service/plugins/include/: ability_manager_plugin_impl.h  database_plugin_impl.h  pasteboard_plugin_impl.h  selection_config_database.h  selection_pasteboard_manager.h
service/plugins/src/: plugin_exports.cpp
service/plugins/src/ability/: ability_manager_plugin_impl.cpp
service/plugins/src/database/: database_plugin.cpp
service/plugins/src/pasteboard/: pasteboard_plugin.cpp  selection_pasteboard_manager.cpp
service/src/: db_selection_config_repository.cpp  selection_app_validator.cpp  selection_common.cpp  selection_config.cpp  selection_config_comparator.cpp  selection_config_database.cpp  selection_input_monitor.cpp  selection_service.cpp  sys_selection_config_repository.cpp  system_ability_status_change_listener.cpp  word_selection_proxy.cpp  word_selection_service.cpp  word_selection_stub.cpp
test/fuzztest/selectioninputability_fuzzer/: BUILD.gn  selectioninputability_fuzzer.cpp  selectioninputability_fuzzer.h
test/fuzztest/selectioninputlistener_fuzzer/: BUILD.gn  selectioninputlistener_fuzzer.cpp  selectioninputlistener_fuzzer.h
test/unittest/: BUILD.gn  ability_manager_plugin_impl_test.cpp  database_plugin_ai_test.cpp  database_plugin_impl_test.cpp  db_selection_config_repository_test.cpp  focus_monitor_test.cpp  ipc_blocklist.txt  pasteboard_plugin_impl_test.cpp  plugin_exports_test.cpp  selection_app_validator_test.cpp  selection_common_test.cpp  selection_config_comparator_test.cpp  selection_config_database_test.cpp  selection_config_test.cpp  selection_input_monitor_common_test.h  selection_input_monitor_ctrl_test.cpp  selection_input_monitor_test.cpp  selection_pasteboard_manager_test.cpp  selection_service_test.cpp  selectionfwk_database_plugin_test.cpp  sys_selection_config_repository_test.cpp  system_ability_status_change_listener_test.cpp
test/unittest/PerformanceTest/: BUILD.gn  build-profile.json5  hvigorfile.ts  oh-package-lock.json5  oh-package.json5
test/unittest/PerformanceTest/AppScope/: app.json5
test/unittest/PerformanceTest/entry/: build-profile.json5  hvigorfile.ts  oh-package.json5
test/unittest/PerformanceTest/hvigor/: hvigor-config.json5
test/unittest/mock/: BUILD.gn  mock_parameter.cpp  sys_selection_config_repository_mock_test.cpp
test/unittest/selection_manager_invalid_operation_js_test/: Ability.test.ets  BUILD.gn  InvalidOperationTest.js  config.json  openharmony_sx.p7b
test/unittest/selection_manager_js_test/: BUILD.gn  PermissionJsTest.js  SelectionManager.test.ets  config.json  openharmony_sx.p7b
test/unittest/systemapi_js_test/: BUILD.gn  PermissionJsTest.js  config.json
(+119 files in other folders)
