# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/systemabilitymgr/selectionfwk/selection_service.gni")

config("selection_sa_config") {
  include_dirs = [
    "include",
    "../utils/include",
    "${target_gen_dir}",
  ]
}

ohos_shared_library("selection_service") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  cflags_cc = [
    "-fdata-sections",
    "-ffunction-sections",
    "-Oz",
    "-std=c++17",
  ]
  ldflags = [
    "-Wl,--as-needed",
    "-Wl,--gc-sections",
  ]
  configs = [ ":selection_sa_config", ]

  include_dirs = [
    "./focus_monitor/include",
    "../sysevent",
  ]

  sources = [
    "src/db_selection_config_repository.cpp",
    "src/selection_service.cpp",
    "src/selection_input_monitor.cpp",
    "focus_monitor/src/focus_change_listener.cpp",
    "focus_monitor/src/focus_monitor_manager.cpp",
    "src/selection_app_validator.cpp",
    "src/selection_config.cpp",
    "src/selection_config_database.cpp",
    "src/sys_selection_config_repository.cpp",
    "src/selection_config_comparator.cpp",
    "src/selection_common.cpp",
    "src/system_ability_status_change_listener.cpp",
    "../sysevent/hisysevent_adapter.cpp",
  ]
  deps = [
    "${selection_fwk_root_path}/interfaces/idl:selection_service_interface",
    "${selection_fwk_root_path}/common:selection_common",
    "${selection_fwk_root_path}/interfaces/idl:selection_service_stub",
    "${selection_fwk_root_path}/interfaces/idl:selection_listener_proxy",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_connect_callback_stub",
    "ability_runtime:ability_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "ipc:ipc_single",
    "init:libbeget_proxy",
    "input:libmmi-client",
    "pasteboard:pasteboard_client",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "input:libmmi-client",
    "os_account:os_account_innerkits",
    "relational_store:native_rdb",
    "hisysevent:libhisysevent",
  ]

  defines = []
  if (window_manager_use_sceneboard) {
    external_deps += [ "window_manager:libwm_lite" ]
    defines += [ "SCENE_BOARD_ENABLE" ]
  } else {
    external_deps += [ "window_manager:libwm" ]
  }

  part_name = "selectionfwk"
  subsystem_name = "systemabilitymgr"
}