# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../selection_service.gni")

config("selection_plugins_config") {
    include_dirs = [
        "include",
        "../include",
        "../../utils/include",
        "../../common/include",
    ]
}

# 静态库：共享SelectionConfig实现
ohos_static_library("selection_config_static") {
    sources = [
        "../src/selection_config.cpp",
    ]

    include_dirs = [
        "../include",
        "../../utils/include",
        "../../common/include",
    ]

    external_deps = [ "hilog:libhilog" ]

    part_name = "selectionfwk"
    subsystem_name = "systemabilitymgr"

    # CFI配置：与共享库保持一致
    sanitize = {
        cfi = true
        cfi_cross_dso = true
        cfi_vcall_icall_only = true
        ubsan = true
        debug = false
    }
}

# 插件实现库（直接导出 C 函数，供 service 调用）
ohos_shared_library("selection_plugins_impl") {
    configs = [ ":selection_plugins_config" ]

    sources = [
        "src/database/database_plugin.cpp",
        "src/database/selection_config_database.cpp",
        "src/pasteboard/pasteboard_plugin.cpp",
        "src/pasteboard/selection_pasteboard_manager.cpp",
        "src/ability/ability_manager_plugin_impl.cpp",
        "src/plugin_exports.cpp",
    ]

    deps = [
        ":selection_config_static",
        "${selection_fwk_root_path}/common:selection_common",
    ]

    external_deps = [
        "c_utils:utils",
        "hilog:libhilog",
        "ipc:ipc_single",
        "pasteboard:pasteboard_client",
        "relational_store:native_rdb",
        "ability_runtime:ability_manager",
        "ability_runtime:ability_connect_callback_stub",
        "ability_base:want",
        "udmf:udmf_client",
    ]

    part_name = "selectionfwk"
    subsystem_name = "systemabilitymgr"

    install_images = [ "system" ]

    # CFI配置：与主服务和native_rdb保持一致，避免跨DSO调用时CFI检查失败
    branch_protector_ret = "pac_ret"
    sanitize = {
        boundary_sanitize = true
        cfi = true
        cfi_cross_dso = true
        cfi_vcall_icall_only = true
        ubsan = true
        debug = false
    }

    # 隐藏符号以减小符号表暴露范围
    cflags_cc = [ "-fvisibility-inlines-hidden" ]

    # 导出工厂函数符号
    cflags_cc += [ "-fvisibility=default" ]

    # 确保CFI相关信息不被strip，并使用立即绑定帮助CFI在加载时完成类型检查
    ldflags = [
        "-Wl,--exclude-libs,ALL",
        "-Wl,-z,now",
    ]
}

