# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/systemabilitymgr/selection_fwk/selection_service.gni")

module_out_path = "selection_fwk/selection_fwk"
ohos_unittest("selection_service_unit_test") {
  module_out_path = module_out_path
  include_dirs = [
    "./",
    "${selection_fwk_root_path}/service/include",
    "${selection_fwk_root_path}/utils/include",
  ]

  sources = [
        "selection_input_monitor_test.cpp",
  ]
  deps = [
    "${selection_fwk_root_path}/service:selection_service",
  ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "c_utils:utils",    
    "googletest:gmock_main",
    "googletest:gtest_main",
    "napi:ace_napi",
    "hilog:libhilog",
    "ipc:ipc_single",
    "init:libbeget_proxy",
    "input:libmmi-client",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "screenlock_mgr:screenlock_client",
  ]
  part_name = "selectionfwk"
  subsystem_name = "systemabilitymgr"
}
