# Copyright (c) 2025 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/systemabilitymgr/selectionfwk/selection_service.gni")

module_out_path = "selectionfwk/selectionfwk"
ohos_unittest("selection_service_unit_test") {
  module_out_path = module_out_path
  cflags_cc = [ "-std=c++17" ]
  include_dirs = [
    "./",
    "${selection_fwk_root_path}/service/include",
    "${selection_fwk_root_path}/utils/include",
  ]

  sources = [
    "selection_config_comparator_test.cpp",
    "selection_input_monitor_test.cpp",
  ]
  deps = [
    "${selection_fwk_root_path}/service:selection_service",
    "${selection_fwk_root_path}/common:selection_common",
  ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "c_utils:utils",    
    "googletest:gmock_main",
    "googletest:gtest_main",
    "napi:ace_napi",
    "hilog:libhilog",
    "ipc:ipc_single",
    "init:libbeget_proxy",
    "input:libmmi-client",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "screenlock_mgr:screenlock_client",
  ]
  part_name = "selectionfwk"
  subsystem_name = "systemabilitymgr"
}

group("selcection_manager_ut") {
  testonly = true
  deps = [
    "systemapi_js_test:SystemApiJsTest",
  ]
}