/*
 * Copyright (c) 2025 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import("//foundation/systemabilitymgr/selectionfwk/selection_service.gni")
import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
 
generate_static_abc("selection_extension_ability_ani") {
  base_url = "./"
  files = [
    "./@ohos.selectionInput.SelectionExtensionAbility.ets",
    "./@ohos.selectionInput.SelectionExtensionContext.ets",
  ]
 
  is_boot_abc = "True"
  device_dst_file = "/system/framework/selection_extension_ability_ani.abc"
}
 
ohos_prebuilt_etc("selection_extension_ability_prebuilt") {
  source = "$target_out_dir/selection_extension_ability_ani.abc"
  deps = [ ":selection_extension_ability_ani" ]
  module_install_dir = "framework"
  subsystem_name = "systemabilitymgr"
  part_name = "selectionfwk"
}
 
group("selection_extension_ability_etc") {
  deps = [ ":selection_extension_ability_prebuilt" ]
}