# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/systemabilitymgr/selectionfwk/selection_service.gni")


ohos_shared_library("selection_extension_ability_native") {

  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }

  cflags_cc = [
    "-fdata-sections",
    "-ffunction-sections",
    "-Os",
  ]
  ldflags = [
    "-Wl,--as-needed",
    "-Wl,--gc-sections",
  ]

  include_dirs = [
    "include",
    "${selection_fwk_root_path}/utils/include",
  ]

  sources = [
    "src/selection_extension.cpp",
    "src/selection_extension_context.cpp",
    "src/selection_extension_module_loader.cpp",
    "src/js_selection_extension.cpp",
    "src/js_selection_extension_context.cpp",
    "src/ets_selection_extension_context.cpp",
    "src/ets_selection_extension.cpp",
  ]


  deps = [
    "${selection_fwk_root_path}/common:selection_common"
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:app_context",
    "ability_runtime:napi_common",
    "ability_runtime:runtime",
    "c_utils:utils",
    "ipc:ipc_napi",
    "napi:ace_napi",
    "hilog:libhilog",
    "window_manager:libwm",
    "runtime_core:ani",
    "ability_runtime:ani_common",
    "ipc:rpc_taihe",
  ]

  relative_install_dir = "extensionability/"
  subsystem_name = "systemabilitymgr"
  part_name = "selectionfwk"
}
