# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/systemabilitymgr/selectionfwk/selection_service.gni")

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("SelectionInputAbilityFuzzTest") {
  module_out_path = "selectionfwk/selectionfwk"

  fuzz_config_file =
      "//foundation/systemabilitymgr/selectionfwk/test/fuzztest/selectioninputability_fuzzer"

  include_dirs = [
    "${selection_fwk_root_path}/frameworks/native/selection_ability/include",
    "${selection_fwk_root_path}/utils/include",
    "${target_gen_dir}",
    "${selection_fwk_root_path}/common",
   ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "selectioninputability_fuzzer.cpp" ]

  deps = [
    "${selection_fwk_root_path}/frameworks/native/selection_ability:selection_ability",
    "${selection_fwk_root_path}/frameworks/native/selection_extension:selection_extension_ability_native",
    "${selection_fwk_root_path}/service:selection_service_proxy",
    "${selection_fwk_root_path}/service:selection_service",
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "c_utils:utils",
    "hilog:libhilog",
    "input:libmmi-client",
    "ipc:ipc_single",
    "napi:ace_napi",
    "window_manager:libdm",
    "samgr:samgr_proxy",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [ ":SelectionInputAbilityFuzzTest" ]
}
###############################################################################
